[gd_scene load_steps=4 format=2]

[ext_resource path="res://highscoreentry/use-cursor-keys.png" type="Texture" id=1]
[ext_resource path="res://highscoreentry/new_high_score.png" type="Texture" id=2]
[ext_resource path="res://highscoreentry/HighScoreEntry.gd" type="Script" id=3]

[node name="HighScoreEntry" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighScore" type="TextureRect" parent="."]
margin_left = 96.0
margin_right = 40.0
margin_bottom = 16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseCursorKeys" type="TextureRect" parent="."]
margin_top = 32.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlphabetContainer" type="Node2D" parent="."]

[node name="InitialContainer" type="Node2D" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
